--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@emotion/react": "^11.11.1",
+        "@emotion/react": "^11.11.3",
         "@emotion/styled": "^11.11.0",
-        "@mui/icons-material": "^5.11.16",
-        "@mui/material": "^5.13.6",
+        "@mui/icons-material": "^5.15.7",
+        "@mui/material": "^5.15.7",
+        "dotenv": "^16.4.1",
         "front-matter": "^4.0.2",
+        "lodash": "^4.17.21",
+        "mui": "^0.0.1",
         "mui-markdown": "^1.1.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.14.1",
         "react-scripts": "5.0.1",
         "react-scroll": "^1.8.9",
+        "sass": "^1.70.0",
         "web-vitals": "^2.1.4"
     },
     "devDependencies": {
@@ -22,6 +26,7 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@types/jest": "^27.5.2",
+        "@types/lodash": "^4.14.202",
         "@types/node": "^16.18.37",
         "@types/preval.macro": "^3.0.0",
         "@types/react": "^18.2.14",
